# antivirus-usb

./: .dockerignore  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists_fix.txt  Dockerfile  README.md  antivirus-usb.desktop  docker-compose.yml  fix_connections.patch  fix_disconnect.patch  resources.qrc  run-docker.sh  test_device  test_device.cpp  usb_autoscan.sh
data/: antivirus.db
quarantine/: virus_trojan.exe_1768493996.quarantine
sql/: schema.sql
sql/queries/: delete_from_quarantine.sql  get_all_quarantine.sql  get_all_signatures.sql  get_device_history.sql  get_signature_id.sql  insert_quarantine.sql  insert_scanned_device.sql  insert_signature_hash.sql  insert_virus_signature.sql  signature_queries.sql
src/: main.cpp
src/entities/: DeviceInfo.h  ScanConfig.cpp  ScanConfig.h  ScanResult.h  Signature.h
src/infrastructure/: DatabaseConnection.cpp  DatabaseConnection.cpp.backup  DatabaseConnection.h  SqlQueryLoader.cpp  SqlQueryLoader.h
src/interfaces/: IDeviceRepository.h  ISignatureRepository.h
src/repositories/: DeviceRepository.cpp  DeviceRepository.h  SignatureRepository.cpp  SignatureRepository.cpp.backup  SignatureRepository.cpp.backup_sql  SignatureRepository.h
src/ui/: MainWindow.cpp  MainWindow.cpp.backup_20260118_011518  MainWindow.cpp.orig  MainWindow.h  MainWindow.h.backup_20260118_011518  MainWindow.ui  MainWindow_fix.cpp  QuarantineDialog.cpp  QuarantineDialog.h  RestoreWorker.h  ResultDialog.h  ScanWorker.h  SettingsDialog.cpp  SettingsDialog.h
src/usecases/: IUsbMonitor.h  IVirusScanner.h  QuarantineManager.cpp  QuarantineManager.h  UsbMonitor.cpp  UsbMonitor.cpp.backup  UsbMonitor.h  UsbMonitor.h.backup  VirusScanner.cpp  VirusScanner.cpp.backup  VirusScanner.h
